# Epidemic-simulation

./: CMakeCache.txt  CMakeLists.txt  README.md  main.cpp
Board_Evolution/: evolve.cpp  evolve.hpp  step.cpp  step.hpp  time_function.hpp
Board_Utilities/: board.cpp  board.hpp
Input_Config/: INPUT_BOARD.txt  SETTINGS.txt  input.hpp
Input_Files/: INPUT_BOARD1.txt  INPUT_BOARD2.txt  INPUT_BOARD4.txt
Tests/Board_Tests/: board_test.cpp
Tests/Epidemic_Evolution_Tests/: evolution_test.cpp
Tests/Input_Tests/: input.hpp  input_test.cpp
Tests/Input_Tests/Failure_Tests/: INPUT_BOARD1.txt  SETTINGS1.txt  SETTINGS10.txt  SETTINGS11.txt  SETTINGS12.txt  SETTINGS2.txt  SETTINGS3.txt  SETTINGS4.txt  SETTINGS5.txt  SETTINGS6.txt  SETTINGS7.txt  SETTINGS8.txt  SETTINGS9.txt
Tests/Input_Tests/Input_Config/: INPUT_BOARD.txt  INPUT_BOARD1.txt  INPUT_BOARD2.txt  INPUT_BOARD3.txt  INPUT_BOARD4.txt  INPUT_BOARD5.txt  SETTINGS.txt  SETTINGS1.txt
Tests/Time_Function_Tests/: time_function_test.cpp
Tests/Whole_Program_Tests/: input.hpp  whole_program_test.cpp
Tests/Whole_Program_Tests/Input_Config/: INPUT_BOARD.txt  SETTINGS.txt
